@@ -10,7 +10,6 @@ import java.util.List;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @UtilityClass
@@ -54,7 +53,7 @@ public final class StreamExUtil {
         List<List<T>> subSets =
             IntStream.range(0, indexes.length-1)
                 .mapToObj(i -> source.subList(indexes[i]+1, indexes[i + 1]))
-                .collect(Collectors.toList());
+                .toList();
 
         return StreamEx.of(subSets);
     }
